@@ -1,3 +1,9 @@
+2004-07-07  Tim Waugh  <twaugh@redhat.com>
+
+	* src/diff.c (read_timezone): New function.
+	(read_timestamp): Use it.  Suggested by Shawn Wagner, for parsing
+	another common traditional date format.
+
 2004-07-03  Tim Waugh  <twaugh@redhat.com>
 
 	* src/filterdiff.c (syntax): Explain --number-files a bit more.
